# forge-backend

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  Vagrantfile  manage.py  setup.cfg  tox.ini
.github/workflows/: ci.yml
docs/: 02-backend-django.md  04-task-engine.md  05-authentication-rbac.md  06-database-schema.md  09-testing-guide.md  11-api-reference.md  12-configuration-reference.md  13-dynamic-surveys.md  14-audit-trail.md  15-event-driven-automation.md  16-drift-detection.md  17-self-service-portal.md  18-oidc-webauthn.md  19-policy-as-code.md  20-iac-scanning.md  21-observability.md  22-multi-tenancy.md  23-recommendations.md  chat_plan.md
forge/: __init__.py  asgi.py  resource_api.py  urls.py  wsgi.py
forge/api/: authentication.py  conf.py  fields.py  generics.py  metadata.py  metrics.py  permissions.py
forge/conf/: access.py  apps.py  conf.py  fields.py  license.py  models.py  registry.py  serializers.py  settings.py  signals.py  urls.py  utils.py  views.py
forge/main/: apps.py  backends.py  conf.py  constants.py  consumers.py  fields.py  ha.py  managers.py  middleware.py  queue.py  registrar.py  routing.py  signals.py  validators.py  views.py  wsrelay.py
forge/ui/: apps.py  (+8 more)
requirements/: README.md  requirements.in  requirements.txt  requirements_git.txt
tests_standalone/: test_audit_trail.py  test_comprehensive.py  test_drift.py  test_drift_audit_fields_schema.py  test_dynamic_survey_standalone.py  test_integration.py  test_observability.py  test_policy.py  test_scanner.py  test_service_catalog.py  test_tenancy.py  test_webauthn.py
(+654 files in other folders)
