[metadata]
name = forge
author = Krstan Vjestica
author_email = krstanvjestica@yahoo.com
version = attr: forge.get_version

[options]
packages = find:
zip_safe = False
include_package_data = True

[options.package_data]
forge =
    templates/**/*
    api/templates/**/*
    static/**/*
    playbooks/**/*
    plugins/**/*
    lib/site-packages/**/*

[options.packages.find]
include =
    forge
    forge.*

[options.entry_points]
console_scripts =
    forge-manage = forge:manage
    awx-manage = forge:manage
forge.credential_plugins =
    conjur = forge.main.credential_plugins.conjur:conjur_plugin
    hashivault_kv = forge.main.credential_plugins.hashivault:hashivault_kv_plugin
    hashivault_ssh = forge.main.credential_plugins.hashivault:hashivault_ssh_plugin
    azure_kv = forge.main.credential_plugins.azure_kv:azure_keyvault_plugin
    aim = forge.main.credential_plugins.aim:aim_plugin
    centrify_vault_kv = forge.main.credential_plugins.centrify_vault:centrify_plugin
    thycotic_dsv = forge.main.credential_plugins.dsv:dsv_plugin
    thycotic_tss = forge.main.credential_plugins.tss:tss_plugin
    aws_secretsmanager_credential = forge.main.credential_plugins.aws_secretsmanager:aws_secretmanager_plugin
